# javelin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gcc_jit_result.c  imgui.ini
.github/workflows/: ci.yml
docs/: _sidebar.md  index.html  index.md  road_map.md
docs/aside/: jit_shader_compilation.md
docs/guide/: basics.md
docs/ire/: atom.md  autodiff.md  callable.md  introduction.md  linkage.md  thunder.md  types.md
examples/: CMakeLists.txt  all  run
examples/colored/: CMakeLists.txt  app.hpp  main.cpp  shaders.cpp  shaders.hpp
examples/common/: CMakeLists.txt  aabb.cpp  aabb.hpp  acceleration_structure.cpp  acceleration_structure.hpp  adaptive_descriptor.hpp  aperature.hpp  application.hpp  camera_controller.cpp  camera_controller.hpp  cmaps.hpp  color.hpp  default_framebuffer_set.hpp  device_resource_collection.cpp  device_resource_collection.hpp  extensions.hpp  features.hpp  font.cpp  font.hpp  formats.cpp  formats.hpp  frame_render_context.hpp  imgui.cpp  imgui.hpp  imported_asset.cpp  imported_asset.hpp  imported_material.hpp  imported_mesh.cpp  imported_mesh.hpp  interactive_window.cpp  interactive_window.hpp  material.cpp  material.hpp  material_flags.hpp  mesh.hpp  messaging.hpp  ray.hpp  sbt.cpp  sbt.hpp  scene.cpp  (+18 more)
examples/common/cpu/: bvh.cpp  bvh.hpp  intersection.cpp  intersection.hpp  scene.cpp  scene.hpp  thread_pool.hpp
examples/common/vulkan/: material.cpp  material.hpp  material_flags.hpp  scene.cpp  scene.hpp  texture_bank.cpp  texture_bank.hpp  triangle_mesh.hpp  vertex_flags.hpp
examples/compute/: CMakeLists.txt  app.hpp  main.cpp  shaders.cpp  shaders.hpp
examples/experimental/: CMakeLists.txt  features.cpp  higher.cpp  ire.cpp  lang.cpp  mir.cpp  tsg.cpp
examples/experimental/proto/: projection.jvl
examples/font/: CMakeLists.txt  app.hpp  main.cpp  shaders.cpp  shaders.hpp
examples/meshlet/: CMakeLists.txt  main.cpp  shaders.cpp  shaders.hpp
examples/ngf/: CMakeLists.txt  main.cpp  ngf.cpp  ngf.hpp  ngf.mesh  ngf.task  shaders.cpp  shaders.hpp
examples/normals/: CMakeLists.txt  main.cpp  shaders.cpp  shaders.hpp
examples/palette/: CMakeLists.txt  app.hpp  main.cpp  shaders.cpp  shaders.hpp
examples/particles/: CMakeLists.txt  app.hpp  cmaps.hpp  main.cpp  shaders.cpp  shaders.hpp
examples/pathtracing/: CMakeLists.txt  main.cpp  shaders.cpp  shaders.hpp
examples/pointclouds/: CMakeLists.txt  main.cpp
examples/raytracing/: CMakeLists.txt  main.cpp  shaders.cpp  shaders.hpp
examples/shadertoy/: CMakeLists.txt  main.cpp  shaders.hpp
include/: constants.hpp  flags.hpp  ire.hpp  logging.hpp  math_types.hpp  rexec.hpp  target.hpp  transform.hpp  trigonometry.hpp  types.hpp  wrapped.hpp  wrapped_types.hpp
include/atom/: atom.hpp  kernel.hpp  linkage.hpp
include/common/: debug.hpp  flags.hpp  io.hpp  logging.hpp  meta.hpp
include/core/: aabb.hpp  adaptive_descriptor.hpp  aperature.hpp  archetype.hpp  color.hpp  device_resource_collection.hpp  formats.hpp  interactive_window.hpp  logging.hpp  material.hpp  math.hpp  mesh.hpp  messaging.hpp  preset.hpp  ray.hpp  reindex.hpp  scene.hpp  texture.hpp  transform.hpp  triangle_mesh.hpp  wrapped.hpp
include/engine/: camera_controller.hpp  device_resource_collection.hpp  frame_render_context.hpp  imgui.hpp  imported_asset.hpp  interactive_window.hpp
include/gfx/: triangle_mesh.hpp  vk_triangle_mesh.hpp
include/ire/: aggregate.hpp  aliases.hpp  arithmetic.hpp  array.hpp  atom.hpp  buffer.hpp  buffer_objects.hpp  callable.hpp  concepts.hpp  control_flow.hpp  core.hpp  emitter.hpp  gltype.hpp  guarantees.hpp  image.hpp  jit.hpp  layout.hpp  layout_io.hpp  linking.hpp  matrix.hpp  memory.hpp  native.hpp  op.hpp  parameters.hpp  primitive.hpp  procedure.hpp  push_constant.hpp  push_constants.hpp  qualified_wrapper.hpp  reference.hpp  sampler.hpp  scratch.hpp  shared.hpp  solidify.hpp  special.hpp  std.hpp  string_literal.hpp  swizzle_base.hpp  swizzle_element.hpp  swizzle_expansion.hpp  (+9 more)
include/lang/: ast.hpp  memory.hpp  parsing.hpp  token.hpp
include/profiles/: targets.hpp
include/rexec/: class.hpp  collection.hpp  error.hpp  manifestation.hpp  resources.hpp  validation.hpp
include/thunder/: ad.hpp  atom.hpp  buffer.hpp  c_like_generator.hpp  cfg.hpp  enumerations.hpp  expansion.hpp  gcc_jit_generator.hpp  generators.hpp  kernel.hpp  legalization.hpp  linkage.hpp  linkage_unit.hpp  opt.hpp  optimization.hpp  overload.hpp  properties.hpp  qualified_type.hpp  reindex.hpp  relocation.hpp  scratch.hpp  tracked_buffer.hpp  usage.hpp
include/tsg/: artifact.hpp  assembler.hpp  classify.hpp  commands.hpp  compile.hpp  error.hpp  exporting.hpp  filters.hpp  flags.hpp  imports.hpp  initializer.hpp  intrinsics.hpp  layouts.hpp  lifting.hpp  meta.hpp  outputs.hpp  pipeline.hpp  program.hpp  requirement.hpp  resolution.hpp  resources.hpp  signature.hpp  verification.hpp
source/atom/: dump.cpp  kernel.cpp  linkage.cpp  reindex.cpp  synthesize_glsl.cpp  type_name.cpp
source/common/: debug.cpp  io.cpp  logging.cpp
source/core/: aabb.cpp  device_resource_collection.cpp  formats.cpp  interactive_window.cpp  preset.cpp  scene.cpp  texture.cpp
source/engine/: camera_controller.cpp  device_resource_collection.cpp  imgui.cpp  imported_asset.cpp  interactive_window.cpp
source/exec/: ire.cpp  lang.cpp  main.cpp
source/ire/: callable.cpp  compaction.cpp  dump.cpp  emitter.cpp  marking.cpp  native.cpp  reindex.cpp  scratch.cpp  synthesize_glsl.cpp  translate_glsl.cpp
source/lang/: lex.cpp
source/test/: ire_callable.cpp  ire_emitter.cpp  ire_ggx_brdf.cpp  ire_jit_gcc.cpp  ire_jit_gcc_material.cpp  ire_solidification.cpp  ire_synthesis.cpp  ire_synthesize_cpp.cpp  matrix.cpp  (+3 more)
testing/: CMakeLists.txt  callable.cpp  compute.cpp  compute_glsl_opengl.cpp  emitter.cpp  ggx.cpp  gl.cpp  gl.hpp  ire_callable.cpp  ire_emitter.cpp  ire_jit_gcc_material.cpp  ire_solidification.cpp  ire_synthesize_cpp.cpp  ire_synthesize_glsl.cpp  layouts_cpp.cpp  layouts_glsl.cpp  layouts_glsl_opengl.cpp  material_gcc.cpp  math_matrix.cpp  solid.cpp  solidification.cpp
(+182 files in other folders)
