project(examples CXX)

include_directories(.)

add_subdirectory(colored)
add_subdirectory(common)
add_subdirectory(compute)
add_subdirectory(experimental)
add_subdirectory(font)
add_subdirectory(meshlet)
add_subdirectory(ngf)
add_subdirectory(normals)
add_subdirectory(palette)
add_subdirectory(particles)
add_subdirectory(raytracing)